[package]
name = "trading-vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading_vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
num-traits = "0.2"
num-derive = "0.4.1"
solana-program = "1.17.2"
anchor-spl = "0.29.0"